# SARM

./: .gitignore  Manifest.toml  Project.toml  README.md  julia_pckages.md  packages.jl
docs/: make.jl
docs/latex/: calc.jl  calc.py  clean_latex.sh  konsole_latexmk.sh  konsole_xelatex.sh  latexmk.sh  latexmk_xelatex.sh  sarm.tex  xelatex.sh
docs/src/: formula.md  index.md
radinput/: NCO2.hdf5  NCO2.npy
rust/python/: README.md  create_npy_files.py  get_parameter.py  parameter_input.py  postprocessing.py  postprocessing_plot_spectrum.py  preprocessing_and_run.py
rust/rust/: Cargo.toml  make_docs.sh
rust/rust/src/: lib.rs
rust/rust/src/pyext/: pylib.rs
rust/rust/src/spectrum/: interpolator.rs  ioutil.rs  parameter.rs  profiles.rs  spectrum.rs  spectrum_F.rs
rust/rust/src/util/: read_hitran.rs
rust/rust_py/: Cargo.toml
rust/rust_py/src/: lib.rs
src/: SARM.jl  Sarm.jl  create_Nthetaz_json_files.jl  database.jl  functioncalls.txt  include_sarm.jl  main.jl  parameter.jl  planck.jl  postprocessing.jl  postprocessing_plot_spectrum.jl  preallocated.jl  profiles.jl  profiles2.jl  profiles_2.jl  resultdata.jl  run_spectrum.jl  spectralline.jl  spectrum.jl  spectrum_v1.jl  start_julia.sh  utils.jl
src/create_input/: create_Nthetaz_json_files.jl  create_QTp_lines_files.jl
src/input/: atmosphere.jl  linedata.jl  linedata.md  mc_over_heigth.jl  moleculardata.jl  parameter.jl  paths.jl  runparameter.jl
src/output/: output.jl
src/postprocessing/: plot_results.jl  postproc2.jl  postproc_plot_intensity_and_spectrum.jl  postprocessing.jl
src/stash/: des.jl  (+6 more)
(+4 files in other folders)
