[package]
name = "sarm"
version = "0.1.0"
authors = ["wester <rolf.wester@mailbox.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
numpy = "0.18.0"
ndarray = "0.15.1"
ndarray-parallel = "0.9.1"
ndarray-npy =  { version = "0.8.1", default-features = false }
serde_json = "1.0.91"
dirs = "4.0.0"
rayon = "1.6.1"
clap = "4.1.4"
itertools-num = "0.1.3"
physical_constants = "0.5.0"

[dependencies.pyo3]
version = "0.18.0"
features = ["extension-module"]

[lib]
name = "sarm"
path = "src/lib.rs"

[[bin]]
name = "sarm"
path = "src/bin/main.rs"

