[package]
name = "pysarm"
version = "0.1.0"
authors = ["wester <rolf.wester@mailbox.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
numpy = "0.18.0"
ndarray = "0.15.2"
serde_json = "1.0.91"
dirs = "4.0.0"
rayon = "1.6.1"
ndarray-parallel = "0.9.1"
clap = "4.1.4"
itertools-num = "0.1.3"
ndarray-npy =  { version = "0.8.1", default-features = false }
sarm = { path = "../rust" }
pyo3 = { version = "0.18.0", features = ["extension-module"] }


[lib]
name = "pysarm"
path = "src/lib.rs"
crate-type = ["cdylib"]
